<resources>
    <string name="app_name">My CheckList</string>
    <string name="name">Nombre</string>
    <string name="password">Password</string>
    <string name="login">Inicio de sesión</string>
    <string name="loading">Loading</string>

    <string name="user_name">Nombre usuario</string>
    <string name="user">Usuario</string>
    <string name="login_img_background">login image background</string>
    <string name="create">Crear</string>
    <string name="back">Volver</string>

    <string name="my_check_list">"My Check List"</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="point">.</string>
    <string name="entry">Entrar</string>
    <string name="borrar">Borrar</string>
    <string name="cargando">Cargando</string>
    <string name="contrasena">Contraseña</string>

</resources>