<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">



    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_back_green" />

    <TextView
        android:id="@+id/new_user_name"
        style="@style/label"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="145dp"
        android:letterSpacing="0.01"
        android:text="@string/user_name"

        android:textAlignment="textStart"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_user_name_box"
        style="@style/textBox"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/user" />

    <requestFocus />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_user_pass_box"
        style="@style/textBox"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="288dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/nuevo_password"
        style="@style/label"
        android:layout_width="99dp"
        android:layout_height="31dp"
        android:layout_below="@id/new_user_name_box"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:letterSpacing="0.01"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textColor="@color/secondary_text"
        android:textSize="20sp" />



    <!-- Boton Crear-->
    <Button
        android:id="@+id/button_create"
        android:layout_width="378dp"
        android:layout_height="57dp"
        android:layout_below="@id/new_user_pass_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:onClick="btnCreate"
        android:text="@string/create"
        android:textColor="@color/primary_100"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Boton Volver -->
    <Button
        android:id="@+id/button_back"
        android:layout_width="142dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="118dp"
        android:text="@string/back"
        android:onClick="btnBack"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</RelativeLayout>